fix Governance page overflow becoz of chart

--- a/packages/website_v2/src/components/GovernancePage/GovernancePage.scss
+++ b/packages/website_v2/src/components/GovernancePage/GovernancePage.scss
@@ -141,6 +141,7 @@
     height: 435px;
     flex: 3;
     position: relative;
+    overflow: hidden;
 
     @media screen and (max-width: 1200px) {
       width: 50%;
